--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "victuallerdev@gmail.com"
         }
     ],
-    "require": {
+    "require-dev": {
         "pocketmine/pocketmine-mp": "^5.0.0",
         "php": "^8.1"
     },
